data transerfered via ajax

--- a/template/home.html
+++ b/template/home.html
@@ -7,7 +7,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta name="keywords" content="" />
     <!--css-->
-    <link href="../static/css/bootstrap.css" type="text/css" rel="stylesheet" media="all">
+    <link href="../static/bootstrap/css/bootstrap.css" type="text/css" rel="stylesheet" media="all">
     <link href="../static/css/style.css" type="text/css" rel="stylesheet" media="all">
     <!-- font-awesome icons -->
     <link href="../static/css/font-awesome.css" rel="stylesheet">
