--- a/template/news.html
+++ b/template/news.html
@@ -3,7 +3,7 @@
 	<meta charset="UTF-8">
 	<head>
 		<title>食堂自助点餐系统</title>
-		<link href="../static/css/bootstrap.css" rel='stylesheet' type='text/css' />
+		<link href="../static/bootstrap/css/bootstrap.css" rel='stylesheet' type='text/css' />
 		<script src="../static/js/jquery.min.js"></script>
 		<link href="../static/css/style2.css" rel='stylesheet' type='text/css' />
 		<script type="text/javascript" src="../static/js/move-top.js"></script>
