--- a/template/sign.html
+++ b/template/sign.html
@@ -9,7 +9,7 @@
     <meta name="keywords" content=""/>
     <meta name="description" content=""/>
 
-    <link rel="stylesheet" type="text/css" href="../static/css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="../static/bootstrap/css/bootstrap.min.css">
 {#    <link rel="stylesheet" type="text/css" href="../fonts/font-awesome-4.7.0/css/font-awesome.min.css">#}
     <link rel="stylesheet" type="text/css" href="../static/fonts/font-awesome-4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" type="text/css" href="../static/fonts/iconic/css/material-design-iconic-font.min.css">
@@ -56,7 +56,7 @@
     </div>
 </div>
 
-<script src="../jquery/jquery-3.2.1.min.js"></script>
+<script src="../static/jquery/jquery-3.2.1.min.js"></script>
 <script src="../static/js/sign.js"></script>
 </body>
 
