--- a/template/Settlement.html
+++ b/template/Settlement.html
@@ -39,6 +39,12 @@
 <body onload="Get_OrderList()">
     <div>
         <label>
+            <script>
+            var text = window.location.search;
+            var param = text.split("&");
+            var price = decodeURIComponent(param[1].split("=")[1]);
+            $("#OrderList").text(price);
+            </script>
         本次订单总价格是：<input type="text" name="OrderList" id="OrderList" style="background-color: transparent;border:0;height: 100px;width: 200px">
         </label>
         <p>微信支付二维码如下：</p>
