--- a/template/Kitchen.html
+++ b/template/Kitchen.html
@@ -23,16 +23,22 @@
                     alert("SUCCESS");
                     order=JSON.parse(data.order);
                     alert("order = "+order);
-                    var tableData="<tr>"
+                    var tableData=""
                     for(var i=0;i<order.length;i++){
-                        tableData+="<tr>"+"<td>"+order[i]+"</td>"+"</tr>"
+                        tableData+="<tr >"+"<td id='CheckStoreT"+i+"'>"+order[i]+"</td>"+"<td>"+
+                            "<button id='CheckStore"+i+"' onclick='checkStore(id)'>检查仓库"+"</button>"+"</td>"+"<td>"+ "<button id='made"+i+"' onclick='made(id)'>制作完毕"+"</button>"+"</td>"+"</tr>"
                     }
-                    tableData+="</tr>"
+                    tableData+="";
+
+
+
                     $("#tbody1").html(tableData)
+
                     alert(tableData);
                 },
                 error:function(data){
                     alert("FAIL");
+
                     alert(data)
 
                 }
@@ -42,6 +48,89 @@
 </head>
 <body>
 <div>
+    <script>
+        function checkStore(id){
+            {#alert(id);#}
+            const i=parseInt(id.split('re')[1]);
+            const newId="#CheckStoreT"+i;
+            alert(newId);
+
+            const string=$(newId).text();
+            alert(string);
+            {#!!!!!!!!!!!!!!!!!!!!!!!! 改成四道菜记得修改#}
+            var orderNum=string.split(',')[0];
+            var temp=string.split(',');
+            let dish=[];
+            let dishNum=[];
+            if(temp.length==8)
+            {
+                dish.push(temp[2].split('_')[0]);
+                dish.push(temp[3].split('_')[0]);
+                dish.push(temp[4].split('_')[0]);
+                dishNum.push(temp[2].split('_')[1]);
+                dishNum.push(temp[3].split('_')[1]);
+                dishNum.push(temp[4].split('_')[1]);
+                alert(dish);
+                alert(dishNum);
+
+            }
+            else if(temp.length==7)
+            {
+                dish.push(temp[2].split('_')[0]);
+                dish.push(temp[3].split('_')[0]);
+                dishNum.push(temp[2].split('_')[1]);
+                dishNum.push(temp[3].split('_')[1]);
+            }
+            else if(temp.length==6)
+            {
+               dish.push(temp[2].split('_')[0]);
+                dishNum.push(temp[2].split('_')[1]);
+            }
+            $.ajax({
+            url:"http://127.0.0.1:8000/checkStore/",
+            traditional:true,
+            type: "POST",
+            dataType:'json',
+            data:{dish:dish,
+                  dishNum:dishNum},
+            {#    没有显示 ！！！！！！！！！！！！！！！！！！！！！！！！！！#}
+            success: function (data) {
+                if(isEmptyObject(data.numberMinus)){
+                        alert("对象为空");
+                }
+                else{
+                    numberMinus=JSON.parse(data.numberMinus);
+                    alert(numberMinus);
+                }
+            },
+                error:function(data){
+                alert("ERROR");
+
+                }
+              });
+
+
+        }
+    </script>
+       <script>
+        function made(id){
+               const i=parseInt(id.split('de')[1]);
+            const newId="#CheckStoreT"+i;
+            alert(newId);
+
+            const string=$(newId).text();
+            alert(string);
+            var orderNum=string.split(',')[0];
+                  $.ajax({
+            url:"http://127.0.0.1:8000/KitchenFinished/",
+            traditional:true,
+            type: "POST",
+            dataType:'json',
+            data:{orderNum:orderNum},
+              });
+        }
+    </script>
+    <button name="" onclick="checkStore()"></button>
     <h3>正在烹饪中……</h3>
     <table>
         <tbody id="tbody1">
