--- a/template/home.html
+++ b/template/home.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>DLUT dining</title>
+    <title>大连理工大学第十食堂</title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta name="keywords" content="" />
@@ -360,4 +360,4 @@
 </script>
 <script src="../static/js/bootstrap.js"></script>
 </body>
-</html
+</html>
