ready to update front page

--- a/template/home.html
+++ b/template/home.html
@@ -28,7 +28,7 @@
         $(".line").slideUp();
     })
 </script>
-<div class="banner">
+<div class="banner1">
     <!-- header -->
     <div class="header">
         <div class="w3ls-header">
@@ -39,6 +39,7 @@
                         <li style="margin-top: 0; ">餐饮须知:</li>
                         <li style="margin-top: 0; ">1.请确保您的电话畅通,方便送餐员及时与您联系!</li>
                         <li style="margin-top: 0; ">2.用餐高峰期时段及恶劣天气情况下,请您提早安排用餐时间,给您带来不便敬请谅解</li>
+                        <li style="margin-top: 0; ">3.最终解释权归食堂所有!</li>
                     </ul>
                     </div>
                 </div>
@@ -54,7 +55,7 @@
                             <a href="register.html"><i class="fa fa-user-plus" aria-hidden="true"></i> 注册</a>
                         </li>
                         <li class="head-dpdn">
-                            <a href="offers.html"><i class="fa fa-gift" aria-hidden="true"></i> 活动</a>
+                            <a href="offers.html"><i class="fa fa-gift" aria-hidden="true"></i> 反馈</a>
                         </li>
                         <li class="head-dpdn">
                             <a href="help.html"><i class="fa fa-question-circle" aria-hidden="true"></i> 帮助</a>
@@ -85,41 +86,27 @@
                             <li class="dropdown">
                                 <a href="#" class="dropdown-toggle" data-toggle="dropdown">菜单 <b class="caret"></b></a>
                                 <ul class="dropdown-menu multi-column columns-3">
-                                    <div class="row">
-                                        <div class="col-sm-4">
                                             <ul class="multi-column-dropdown">
-                                                <h6>食物类型</h6>
                                                 <li><a href="news.html">早餐</a></li>
                                                 <li><a href="news.html">午餐</a></li>
                                                 <li><a href="news.html">晚餐</a></li>
                                             </ul>
-                                        </div>
-                                    
                                         <div class="clearfix"></div>
-                                    </div>
                                 </ul>
                             </li>
-                            <li><a href="about.html">关于</a></li>
-            
                             <li><a href="contact.html">联系我们</a></li>
                         </ul>
                     </div>
                     <div class="cart cart box_1">
-                    
-                        <!--<form action="#" method="post" class="last">-->
-                            <!--<input type="hidden" name="cmd" value="_cart" />-->
-                            <!--<input type="hidden" name="display" value="1" />-->
+
+
                             <button class="w3view-cart"><i class="fa fa-cart-arrow-down" aria-hidden="true"></i></button>
-                        <!--</form>-->
                         <div id="staplesbmincart">
                             <form method="post" class="sbmincart-empty" action="news.html" target="">
                                 <button type="button" class="sbmincart-closer">×</button>
                                 <div class="sbmincart-footer">
                                     <p class="sbmincart-empty-text">你的购物车是空的!</p>
                                 </div>
-                                <!--<input type="hidden" name="cmd" value="_cart">-->
-                                <!--<input type="hidden" name="upload" value="1">-->
-                                <!--<input type="hidden" name="bn" value="sbmincart_AddToCart_WPS_US">-->
                             </form>
                         </div>
                     </div>
@@ -135,11 +122,17 @@
             <div class="w3ls-add-grids">
                 <a href="news.html">
                     <!--食物介绍-->
+                    <h4><span>南北</span>美食,风味<span>小吃</span></h4>
+                    <h5>大连理工大学第十食堂</h5>
+                    <h6>现在订餐<i class="fa fa-arrow-circle-right" aria-hidden="true"></i></h6>
                 </a>
             </div>
             <div class="w3ls-add-grids w3ls-add-grids-right">
                 <a href="news.html">
                     <!--食物介绍-->
+                    <h4>2019年食品评级为<span>A级</span></h4>
+                    <h5>食品安全、可视化管理、设置意见箱</h5>
+                    <h6>现在订餐<i class="fa fa-arrow-circle-right" aria-hidden="true"></i></h6>
                 </a>
             </div>
             <div class="clearfix"> </div>
@@ -159,7 +152,7 @@
                 <!-- Owl-Carousel -->
                 <div id="owl-demo" class="owl-carousel text-center agileinfo-gallery-row">
                     <a href="news.html" class="item g1">
-                        <img class="lazyOwl" src="../static/image/food1.jpg" title="Our latest gallery" alt=""/>
+                        <img class="lazyOwl" src="../static/image/breakfast.jpg" title="Our latest gallery" alt=""/>
                         <div class="agile-dish-caption">
                             <h4>营养早餐</h4>
                             <span>主材料:鸡蛋、火腿、面包、水果</span><br/>
@@ -167,7 +160,7 @@
                         </div>
                     </a>
                     <a href="news.html" class="item g1">
-                        <img class="lazyOwl" src="../static/image/food3.jpg" title="Our latest gallery" alt=""/>
+                        <img class="lazyOwl" src="../static/image/liaoli.jpg" title="Our latest gallery" alt=""/>
                         <div class="agile-dish-caption">
                             <h4>日韩料理</h4>
                             <span>主材料:三文鱼、紫菜包饭</span><br/>
@@ -175,7 +168,7 @@
                         </div>
                     </a>
                     <a href="news.html" class="item g1">
-                        <img class="lazyOwl" src="../static/image/food3.jpg" title="Our latest gallery" alt=""/>
+                        <img class="lazyOwl" src="../static/image/zhab.jpg" title="Our latest gallery" alt=""/>
                         <div class="agile-dish-caption">
                             <h4>炸饼</h4>
                             <span>主要食材:玉米面,玉米油,黄油</span><br>
@@ -183,7 +176,7 @@
                         </div>
                     </a>
                     <a href="news.html" class="item g1">
-                        <img class="lazyOwl" src="../static/image/food2.jpg" title="Our latest gallery" alt=""/>
+                        <img class="lazyOwl" src="../static/image/sala.jpg" title="Our latest gallery" alt=""/>
                         <div class="agile-dish-caption">
                             <h4>沙拉</h4>
                             <span>主要食材:圣女果，生菜，沙拉，香蕉</span><br>
@@ -192,31 +185,35 @@
                         </div>
                     </a>
                     <a href="news.html" class="item g1">
-                        <img class="lazyOwl" src="../static/image/food1.jpg" alt=""/>
+                        <img class="lazyOwl" src="../static/image/dessert.jpg" alt=""/>
                         <div class="agile-dish-caption">
                             <h4>萌萌甜点</h4>
-                            <span>Neque porro quisquam est qui dolorem </span>
+                            <span>主要食材:小麦面,奶油,果酱</span><br>
+                            <span>饭后来一点，甜蜜一整天!</span>
                         </div>
                     </a>
                     <a href="news.html" class="item g1">
-                        <img class="lazyOwl" src="../static/image/food2.jpg" title="Our latest gallery" alt=""/>
+                        <img class="lazyOwl" src="../static/image/bouili.jpg" title="Our latest gallery" alt=""/>
                         <div class="agile-dish-caption">
                             <h4>红烧肉</h4>
-                            <span>... </span>
+                            <span>主要食材:五花肉,红糖,酱油，料酒，蒜</span><br>
+                            <span>软糯可口，入口即化，是妈妈的味道!</span>
                         </div>
                     </a>
                     <a href="news.html" class="item g1">
-                        <img class="lazyOwl" src="../static/image/food3.jpg" title="Our latest gallery" alt=""/>
+                        <img class="lazyOwl" src="../static/image/paigu.jpg" title="Our latest gallery" alt=""/>
                         <div class="agile-dish-caption">
                             <h4>糖醋排骨</h4>
-                            <span>... </span>
+                            <span>主要食材:排骨,红糖,番茄酱</span><br>
+                            <span>酸甜可口!</span>
                         </div>
                     </a>
                     <a href="news.html" class="item g1">
-                        <img class="lazyOwl" src="../static/image/food2.jpg" title="Our latest gallery" alt=""/>
+                        <img class="lazyOwl" src="../static/image/fish.jpg" title="Our latest gallery" alt=""/>
                         <div class="agile-dish-caption">
                             <h4>水煮鱼</h4>
-                            <span>...</span>
+                            <span>主要食材:黑鱼,辣椒,香菜</span><br>
+                            <span>香辣口味，吃得过瘾!</span>
                         </div>
                     </a>
                 </div>
@@ -226,78 +223,6 @@
     </div>
 </div>
 
-   <!--  <div class="subscribe agileits-w3layouts">
-    <div class="container">
-        <div class="col-md-6 social-icons w3-agile-icons">
-            <h4>Keep in touch</h4>
-            <ul>
-                <li><a href="#" class="fa fa-facebook icon facebook"> </a></li>
-                <li><a href="#" class="fa fa-twitter icon twitter"> </a></li>
-                <li><a href="#" class="fa fa-google-plus icon googleplus"> </a></li>
-                <li><a href="#" class="fa fa-dribbble icon dribbble"> </a></li>
-                <li><a href="#" class="fa fa-rss icon rss"> </a></li>
-            </ul>
-            <ul class="apps">
-                <li><h4>Download Our app : </h4> </li>
-                <li><a href="#" class="fa fa-apple"></a></li>
-                <li><a href="#" class="fa fa-windows"></a></li>
-                <li><a href="#" class="fa fa-android"></a></li>
-            </ul>
-        </div>
-        <div class="col-md-6 subscribe-right">
-            <h3 class="w3ls-title">Subscribe to Our <br><span>Newsletter</span></h3>
-            <form action="#" method="post">
-                <input type="email" name="email" placeholder="Enter your Email..." required="">
-                <input type="submit" value="Subscribe">
-                <div class="clearfix"> </div>
-            </form>
-            <img src="image/left.png" class="sub-w3lsimg" alt=""/>
-        </div>
-        <div class="clearfix"> </div>
-    </div>
-    </div> -->
-<!-- <div class="footer agileits-w3layouts">
-    <div class="container">
-        <div class="w3_footer_grids">
-            <div class="col-xs-6 col-sm-3 footer-grids w3-agileits">
-                <h3>company</h3>
-                <ul>
-                    <li><a href="about.html">About Us</a></li>
-                    <li><a href="contact.html">Contact Us</a></li>
-                    <li><a href="careers.html">Careers</a></li>
-                    <li><a href="help.html">Partner With Us</a></li>
-                </ul>
-            </div>
-            <div class="col-xs-6 col-sm-3 footer-grids w3-agileits">
-                <h3>help</h3>
-                <ul>
-                    <li><a href="faq.html">FAQ</a></li>
-                    <li><a href="login.html">Returns</a></li>
-                    <li><a href="login.html">Order Status</a></li>
-                    <li><a href="offers.html">Offers</a></li>
-                </ul>
-            </div>
-            <div class="col-xs-6 col-sm-3 footer-grids w3-agileits">
-                <h3>policy info</h3>
-                <ul>
-                    <li><a href="terms.html">Terms & Conditions</a></li>
-                    <li><a href="privacy.html">Privacy Policy</a></li>
-                    <li><a href="login.html">Return Policy</a></li>
-                </ul>
-            </div>
-            <div class="col-xs-6 col-sm-3 footer-grids w3-agileits">
-                <h3>Menu</h3>
-                <ul>
-                    <li><a href="menu.html">All Day Menu</a></li>
-                    <li><a href="menu.html">Lunch</a></li>
-                    <li><a href="menu.html">Dinner</a></li>
-                    <li><a href="menu.html">Flavours</a></li>
-                </ul>
-            </div>
-            <div class="clearfix"> </div>
-        </div>
-    </div>
-</div> -->
 <div class="copyw3-agile">
     <div class="container">
         <p>Copyright &copy; 2019.小学期<a href="#" target="_blank" title="美味无穷">美味无穷</a></p>
@@ -360,4 +285,4 @@
 </script>
 <script src="../static/js/bootstrap.js"></script>
 </body>
-</html>
+</html
