--- a/template/news.html
+++ b/template/news.html
@@ -2,13 +2,18 @@
 <html>
 	<meta charset="UTF-8">
 	<head>
-		<title>食堂自助点餐系统</title>
+		<title>大连理工大学第十食堂</title>
 		<link href="../static/bootstrap/css/bootstrap.css" rel='stylesheet' type='text/css' />
 		<script src="../static/js/jquery.min.js"></script>
 		<link href="../static/css/style2.css" rel='stylesheet' type='text/css' />
+        <link href="../static/css/style.css" rel='stylesheet' type='text/css' media="all"/>
+		<link href="../static/css/font-awesome.css" rel="stylesheet">
+		<link rel="stylesheet" href="../static/css/owl.carousel.css" type="text/css" media="all"/>
+		<script src="../static/js/jquery-2.2.3.min.js"></script>
 		<script type="text/javascript" src="../static/js/move-top.js"></script>
 		<script type="text/javascript" src="../static/js/easing.js"></script>
 		<script type="text/javascript" src="../static/js/Plus.js"></script>
+        <script src="../static/js/myslideup.js"></script>
 		<script type="text/javascript">
 			jQuery(document).ready(function($) {
 				$(".scroll").click(function(event){
@@ -17,6 +22,7 @@
 				});
 			});
 		</script>
+
 		<script>
 		$(function() {
 			var pull 		= $('#pull');
